// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema-items-is-object return errors if items is not an object 1`] = `
Array [
  Object {
    "code": "schema-items-is-object",
    "message": "should be object",
    "path": Array [
      "schema",
      "items",
    ],
    "severity": 1,
  },
]
`;

exports[`schema-items-is-object return errors if items is undefined 1`] = `
Array [
  Object {
    "code": "schema-items-is-object",
    "message": "schema.items does not exist",
    "path": Array [
      "schema",
      "items",
    ],
    "severity": 1,
  },
]
`;
